// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Action Action 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column"
  >
    <img
      alt="Reduce pest populations"
      className="makeStyles-image-138"
      src="/pest.png"
    />
    <p
      className="MuiTypography-root makeStyles-name-139 MuiTypography-body1"
    >
      Reduce pest populations
    </p>
    <p
      className="MuiTypography-root makeStyles-description-140 MuiTypography-body1"
    >
      Monitor and reduce the population of foxes, cats, dingos/wild dogs.
    </p>
  </div>
</div>
`;

exports[`Storyshots Components|Button Next Button 1`] = `
<div>
  <div
    className="makeStyles-root-383"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root makeStyles-icon-384 makeStyles-icon-385"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <svg
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="Icon / Arrow / Large"
        >
          <path
            clipRule="evenodd"
            d="M11 4.25C11 4.11193 11.1119 4 11.25 4H12.75C12.8881 4 13 4.11193 13 4.25V16.4L18.2232 11.1768C18.3209 11.0791 18.4792 11.0791 18.5768 11.1768L19.6375 12.2374C19.7351 12.3351 19.7351 12.4934 19.6375 12.591L12.1721 20.0564C12.1219 20.1065 12.0557 20.1309 11.99 20.1295C11.9243 20.1309 11.8581 20.1065 11.8079 20.0564L4.34257 12.591C4.24494 12.4934 4.24494 12.3351 4.34257 12.2374L5.40323 11.1768C5.50086 11.0791 5.65915 11.0791 5.75678 11.1768L11 16.42V4.25Z"
            fill="#4FB573"
            fillRule="evenodd"
            id="Union"
          />
        </g>
      </svg>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Components|Button Outlined Button 1`] = `
<div>
  <button
    className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-318 MuiButton-text MuiButton-textSecondary"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <span
        className="MuiButton-startIcon WithStyles(ForwardRef(Button))-startIcon-319 MuiButton-iconSizeMedium"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
          />
        </svg>
      </span>
      read more
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Storyshots Components|Button Prev Button 1`] = `
<div>
  <div
    className="makeStyles-root-407"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root makeStyles-icon-408 makeStyles-icon-409"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <svg
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="Icon / Arrow / Large"
        >
          <path
            clipRule="evenodd"
            d="M11 4.25C11 4.11193 11.1119 4 11.25 4H12.75C12.8881 4 13 4.11193 13 4.25V16.4L18.2232 11.1768C18.3209 11.0791 18.4792 11.0791 18.5768 11.1768L19.6375 12.2374C19.7351 12.3351 19.7351 12.4934 19.6375 12.591L12.1721 20.0564C12.1219 20.1065 12.0557 20.1309 11.99 20.1295C11.9243 20.1309 11.8581 20.1065 11.8079 20.0564L4.34257 12.591C4.24494 12.4934 4.24494 12.3351 4.34257 12.2374L5.40323 11.1768C5.50086 11.0791 5.65915 11.0791 5.75678 11.1768L11 16.42V4.25Z"
            fill="#4FB573"
            fillRule="evenodd"
            id="Union"
          />
        </g>
      </svg>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Components|Cards Impact Card 1`] = `
<div>
  <div
    className="MuiPaper-root MuiCard-root makeStyles-root-882 makeStyles-root-883 MuiPaper-elevation0 MuiPaper-rounded"
  >
    <div
      className="makeStyles-background-870 makeStyles-background-877"
    >
      <div
        className="makeStyles-backgroundGradient-875 makeStyles-backgroundGradient-881"
      />
      <div
        className="makeStyles-text-871 makeStyles-text-878"
      >
        <p
          className="MuiTypography-root makeStyles-name-872 makeStyles-name-879 MuiTypography-body1"
        />
        <p
          className="MuiTypography-root makeStyles-description-873 makeStyles-description-880 MuiTypography-body1"
        >
          Increasing all living biomass which is located above the ground.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Cards Monitored Impact Card 1`] = `
<div>
  <div
    className="MuiPaper-root MuiCard-root makeStyles-root-1037 makeStyles-root-1038 MuiPaper-elevation0 MuiPaper-rounded"
  >
    <div
      className="makeStyles-background-1025 makeStyles-background-1032"
    >
      <div
        className="makeStyles-backgroundGradient-1030 makeStyles-backgroundGradient-1036"
      />
      <div
        className="makeStyles-text-1026 makeStyles-text-1033"
      >
        <p
          className="MuiTypography-root makeStyles-name-1027 makeStyles-name-1034 MuiTypography-body1"
        />
        <p
          className="MuiTypography-root makeStyles-description-1028 makeStyles-description-1035 MuiTypography-body1"
        >
          Healthy ecosystems and rich biodiversity are fundamental to life on our planet.
        </p>
        <span
          className="makeStyles-monitored-1029"
        >
          <span
            className="makeStyles-monitoredIcon-1031"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <svg
                fill="none"
                height="25"
                viewBox="0 0 25 25"
                width="25"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.3875 1.73937C12.4076 1.71659 12.4445 1.69499 12.5 1.69499C12.5555 1.69499 12.5924 1.71659 12.6125 1.73937C15.3639 4.85786 19.362 6.83299 23.8174 6.85551C22.4923 13.9684 18.2962 20.051 12.5 23.8168C6.70382 20.051 2.50766 13.9684 1.18257 6.85551C5.638 6.83299 9.63613 4.85786 12.3875 1.73937Z"
                  stroke="#4FB573"
                />
                <rect
                  fill="#4FB573"
                  height="11.7178"
                  rx="0.25"
                  transform="rotate(45 18.1241 9)"
                  width="2"
                  x="18.1241"
                  y="9"
                />
                <rect
                  fill="#4FB573"
                  height="5.99902"
                  rx="0.25"
                  transform="matrix(-0.707107 0.707107 0.707107 0.707107 8.41422 13.0438)"
                  width="2"
                />
              </svg>
            </svg>
          </span>
          verified and tracked on the regen ledger
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Cards Project Developer Card 1`] = `
<div>
  <div
    className="MuiPaper-root MuiCard-root makeStyles-root-610 makeStyles-root-611 MuiPaper-elevation0 MuiPaper-rounded"
  >
    <div
      className="makeStyles-container-608"
    >
      <div>
        <p
          className="MuiTypography-root makeStyles-title-641 MuiTypography-body1"
        >
          project developer
        </p>
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle makeStyles-root-784 makeStyles-root-785"
            >
              <img
                alt="Odonata"
                className="MuiAvatar-img"
                src="http://www.odonata.org.au/wp-content/uploads/2018/01/odinata-logo-only.png"
              />
            </div>
          </div>
          <div
            className="MuiGrid-root makeStyles-text-672 makeStyles-text-677 MuiGrid-item"
          >
            <p
              className="MuiTypography-root makeStyles-name-673 makeStyles-name-678 MuiTypography-body1"
            >
              Odonata
            </p>
            <p
              className="MuiTypography-root makeStyles-place-676 makeStyles-place-679 MuiTypography-body1"
            >
              South Melbourne, Victoria, Australia
            </p>
            <p
              className="MuiTypography-root makeStyles-description-675 MuiTypography-body1"
            >
              Odonata is a not-for-profit entity supporting biodiversity impact solutions.
            </p>
          </div>
        </div>
      </div>
      <div>
        <hr
          className="makeStyles-separator-609"
        />
        <div>
          <p
            className="MuiTypography-root makeStyles-title-641 MuiTypography-body1"
          >
            land steward
          </p>
          <div
            className="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <div
                className="MuiAvatar-root MuiAvatar-circle makeStyles-root-784 makeStyles-root-796"
              >
                <img
                  alt="Ngarrindjeri Tribe"
                  className="MuiAvatar-img"
                  src="/tribe.png"
                />
              </div>
            </div>
            <div
              className="MuiGrid-root makeStyles-text-672 makeStyles-text-793 MuiGrid-item"
            >
              <p
                className="MuiTypography-root makeStyles-name-673 makeStyles-name-794 MuiTypography-body1"
              >
                Ngarrindjeri Tribe
              </p>
              <p
                className="MuiTypography-root makeStyles-place-676 makeStyles-place-795 MuiTypography-body1"
              >
                Southern Australia
              </p>
              <p
                className="MuiTypography-root makeStyles-description-675 MuiTypography-body1"
              >
                The Ngarrindjeri culture is centered around the lower lakes of the Murray River.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Credits Credit Details 1`] = `
<div>
  <div
    className="makeStyles-root-1159 makeStyles-root-1170"
  >
    <div
      className="makeStyles-topBar-1160"
    />
    <div
      className="makeStyles-container-1166"
    >
      <div
        className="makeStyles-descriptionTitle-1167"
      >
        <h2
          className="MuiTypography-root makeStyles-root-1171 undefined MuiTypography-h2 MuiTypography-colorTextPrimary MuiTypography-alignLeft"
        >
          <span
            className="makeStyles-icon-1165"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
              focusable="false"
              role="presentation"
              viewBox="0 0 25 23"
            >
              <svg
                fill="none"
                height="23"
                viewBox="0 0 25 23"
                width="25"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1 5V17C1 19.2091 4.13401 21 8 21C9.4225 21 10.7459 20.7575 11.8505 20.341"
                  stroke="#4FB573"
                  strokeWidth="2"
                />
                <path
                  d="M1 14C1 16.2091 4.13401 18 8 18C8.4894 18 8.96708 17.9713 9.42815 17.9167"
                  stroke="#4FB573"
                />
                <path
                  d="M1 11C1 13.2091 4.13401 15 8 15C8.33952 15 8.6734 14.9862 9 14.9595"
                  stroke="#4FB573"
                />
                <path
                  d="M1 8C1 10.2091 4.13401 12 8 12C8.33952 12 8.6734 11.9862 9 11.9595"
                  stroke="#4FB573"
                />
                <ellipse
                  cx="8"
                  cy="5"
                  rx="7"
                  ry="4"
                  stroke="#4FB573"
                  strokeWidth="2"
                />
                <circle
                  cx="16.5"
                  cy="14.5"
                  r="7.5"
                  stroke="#4FB573"
                  strokeWidth="2"
                />
              </svg>
            </svg>
          </span>
          Australian Biodiversity Units (ABU’s)
        </h2>
      </div>
      <div
        className="makeStyles-descriptionItem-1168"
      >
        <p
          className="MuiTypography-root makeStyles-description-1161 MuiTypography-body1"
        >
          ABU’s are an Australian Government endorsed biodiversity credit. An individual ABU represents a 1.5m square area of land of significant environmental value that has been placed under a conservation covenant and agreed management plan. The covenant and management plan secure the long term preservation of the site and ensure the biodiversity value is protected in perpetuity. Vegetation types may include forests, grasslands, mallees, saltmarshes, scrubs, shrublands, wetlands, and woodlands. ABU’s are an innovative and unique way for organisations to preserve a tangible section of Australia’s unique natural habitat.
        </p>
      </div>
      <div
        className="makeStyles-activitiesTitle-1169"
      >
        <h3
          className="MuiTypography-root makeStyles-root-1171 undefined MuiTypography-h3 MuiTypography-colorTextPrimary MuiTypography-alignLeft"
        >
          Key activities and outcomes
        </h3>
      </div>
      <div>
        <ul
          className="makeStyles-activities-1163"
        >
          <p
            className="MuiTypography-root makeStyles-activity-1164 MuiTypography-body1"
          >
            <li>
              Site accredited as a Specific Environmental Benefit (SEB) site and credits created by the South Australian Department of Environment and Water.
            </li>
          </p>
          <p
            className="MuiTypography-root makeStyles-activity-1164 MuiTypography-body1"
          >
            <li>
              A land management services agreement will be established with a local indigenous group, employing people from the local community.
            </li>
          </p>
          <p
            className="MuiTypography-root makeStyles-activity-1164 MuiTypography-body1"
          >
            <li>
              The site will be managed in accordance with an agreed management plan to reduce weed pressure, improve the biodiversity value of the location and preserve the value of the land in perpetuity.
            </li>
          </p>
          <p
            className="MuiTypography-root makeStyles-activity-1164 MuiTypography-body1"
          >
            <li>
              After 10 years the land will be vetted to Rigney Namawi Pty Ltd (local indigenous traditional owners). Six monthly project updates in the form of videos, blog posts and photographs will be produced for the first 5 years of the project.
            </li>
          </p>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Description Description 1`] = `
<div>
  <div
    className="MuiTypography-root makeStyles-root-1243 makeStyles-root-1244 MuiTypography-body1"
  >
    Sheoak Hill, 60km west of Melbourne, has the potential to revolutionise how our natural areas are funded to be restored and maintained in perpetuity. The concept is underpinned by the power of values-aligned landholders working collaboratively to purchase and lovingly maintain manageable areas (40ha) of covented bushland and work toward a common goal.
  </div>
</div>
`;

exports[`Storyshots Components|Place Basic Place Info 1`] = `
<div>
  <div
    className="makeStyles-root-1317"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
      focusable="false"
      role="presentation"
      viewBox="0 0 13 16"
    >
      <path
        d="M13 6.375C13 11.2343 7.97202 14.9913 6.76036 15.8261C6.60169 15.9354 6.39831 15.9354 6.23964 15.8261C5.02798 14.9913 0 11.2343 0 6.375C0 2.85418 2.91015 0 6.5 0C10.0899 0 13 2.85418 13 6.375Z"
        fill="#D2D5D9"
      />
      <circle
        cx="6.5"
        cy="6.5"
        fill="white"
        r="3.5"
      />
      <path
        d="M13 6.375C13 11.2343 7.97202 14.9913 6.76036 15.8261C6.60169 15.9354 6.39831 15.9354 6.23964 15.8261C5.02798 14.9913 0 11.2343 0 6.375C0 2.85418 2.91015 0 6.5 0C10.0899 0 13 2.85418 13 6.375Z"
        fill="#4FB573"
      />
      <circle
        cx="6.5"
        cy="6.5"
        fill="white"
        r="3.5"
      />
    </svg>
    <p
      className="MuiTypography-root makeStyles-content-1318 makeStyles-content-1319 MuiTypography-body1"
    >
      Melbourne, Victoria, Australia
    </p>
  </div>
</div>
`;

exports[`Storyshots Components|Place Credit Place Info 1`] = `
<div>
  <div
    className="makeStyles-root-1489"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
      focusable="false"
      role="presentation"
      viewBox="0 0 13 16"
    >
      <path
        d="M13 6.375C13 11.2343 7.97202 14.9913 6.76036 15.8261C6.60169 15.9354 6.39831 15.9354 6.23964 15.8261C5.02798 14.9913 0 11.2343 0 6.375C0 2.85418 2.91015 0 6.5 0C10.0899 0 13 2.85418 13 6.375Z"
        fill="#D2D5D9"
      />
      <circle
        cx="6.5"
        cy="6.5"
        fill="white"
        r="3.5"
      />
      <path
        d="M13 6.375C13 11.2343 7.97202 14.9913 6.76036 15.8261C6.60169 15.9354 6.39831 15.9354 6.23964 15.8261C5.02798 14.9913 0 11.2343 0 6.375C0 2.85418 2.91015 0 6.5 0C10.0899 0 13 2.85418 13 6.375Z"
        fill="#4FB573"
      />
      <circle
        cx="6.5"
        cy="6.5"
        fill="white"
        r="3.5"
      />
    </svg>
    <p
      className="MuiTypography-root makeStyles-content-1490 makeStyles-content-1491 MuiTypography-body1"
    >
      Brazil
       in 
      <span
        className="makeStyles-outcome-1488"
      >
        carbon
      </span>
    </p>
  </div>
</div>
`;

exports[`Storyshots Components|Place Project Place Info 1`] = `
<div>
  <div
    className="makeStyles-root-1403"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
      focusable="false"
      role="presentation"
      viewBox="0 0 13 16"
    >
      <path
        d="M13 6.375C13 11.2343 7.97202 14.9913 6.76036 15.8261C6.60169 15.9354 6.39831 15.9354 6.23964 15.8261C5.02798 14.9913 0 11.2343 0 6.375C0 2.85418 2.91015 0 6.5 0C10.0899 0 13 2.85418 13 6.375Z"
        fill="#D2D5D9"
      />
      <circle
        cx="6.5"
        cy="6.5"
        fill="white"
        r="3.5"
      />
      <path
        d="M13 6.375C13 11.2343 7.97202 14.9913 6.76036 15.8261C6.60169 15.9354 6.39831 15.9354 6.23964 15.8261C5.02798 14.9913 0 11.2343 0 6.375C0 2.85418 2.91015 0 6.5 0C10.0899 0 13 2.85418 13 6.375Z"
        fill="#4FB573"
      />
      <circle
        cx="6.5"
        cy="6.5"
        fill="white"
        r="3.5"
      />
    </svg>
    <p
      className="MuiTypography-root makeStyles-content-1404 makeStyles-content-1405 MuiTypography-body1"
    >
      Melbourne, Victoria, Australia
      <span
        className="makeStyles-separator-1402"
      >
          |  
      </span>
      440
       hectares
    </p>
  </div>
</div>
`;

exports[`Storyshots Components|Protected Species Item 1`] = `
<div>
  <div
    className="makeStyles-root-1564"
  >
    <img
      alt="Melaleuca brevifolia"
      className="makeStyles-img-1565"
      src="./melaleuca-b.png"
    />
    <p
      className="MuiTypography-root makeStyles-name-1566 MuiTypography-body1"
    >
      Melaleuca brevifolia
    </p>
  </div>
</div>
`;

exports[`Storyshots Components|Protected Species Protected Species 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
    >
      <div>
        <div
          className="slick-slider makeStyles-root-1854 slick-initialized"
          dir="ltr"
        >
          <div
            className="slick-list"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={null}
            onMouseMove={null}
            onMouseUp={[Function]}
            onTouchCancel={null}
            onTouchEnd={[Function]}
            onTouchMove={null}
            onTouchStart={[Function]}
            style={Object {}}
          >
            <div
              className="slick-track"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "WebkitTransform": "translate3d(0px, 0px, 0px)",
                  "WebkitTransition": "",
                  "msTransform": "translateX(0px)",
                  "opacity": 1,
                  "transform": "translate3d(0px, 0px, 0px)",
                  "transition": "",
                }
              }
            >
              <div
                aria-hidden={true}
                className="slick-slide slick-cloned"
                data-index={-1}
                onClick={[Function]}
                style={
                  Object {
                    "width": 0,
                  }
                }
                tabIndex="-1"
              >
                <div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                </div>
                <div />
              </div>
              <div
                aria-hidden={false}
                className="slick-slide slick-active slick-current"
                data-index={0}
                onClick={[Function]}
                style={
                  Object {
                    "outline": "none",
                    "width": 0,
                  }
                }
                tabIndex="-1"
              >
                <div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-hidden={true}
                className="slick-slide"
                data-index={1}
                onClick={[Function]}
                style={
                  Object {
                    "outline": "none",
                    "width": 0,
                  }
                }
                tabIndex="-1"
              >
                <div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-hidden={true}
                className="slick-slide"
                data-index={2}
                onClick={[Function]}
                style={
                  Object {
                    "outline": "none",
                    "width": 0,
                  }
                }
                tabIndex="-1"
              >
                <div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                </div>
                <div />
              </div>
              <div
                aria-hidden={true}
                className="slick-slide slick-cloned"
                data-index={3}
                onClick={[Function]}
                style={
                  Object {
                    "width": 0,
                  }
                }
                tabIndex="-1"
              >
                <div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-hidden={true}
                className="slick-slide slick-cloned"
                data-index={4}
                onClick={[Function]}
                style={
                  Object {
                    "width": 0,
                  }
                }
                tabIndex="-1"
              >
                <div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-hidden={true}
                className="slick-slide slick-cloned"
                data-index={5}
                onClick={[Function]}
                style={
                  Object {
                    "width": 0,
                  }
                }
                tabIndex="-1"
              >
                <div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                  <div
                    className="makeStyles-item-1855"
                    style={
                      Object {
                        "display": "inline-block",
                        "width": "50%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="makeStyles-root-1857"
                    >
                      <img
                        alt="Melaleuca brevifolia"
                        className="makeStyles-img-1858"
                        src="./melaleuca-b.png"
                      />
                      <p
                        className="MuiTypography-root makeStyles-name-1859 MuiTypography-body1"
                      >
                        Melaleuca brevifolia
                      </p>
                    </div>
                  </div>
                </div>
                <div />
              </div>
            </div>
          </div>
        </div>
        <div
          className="MuiGrid-root makeStyles-buttons-1856 MuiGrid-container MuiGrid-justify-xs-flex-end"
        >
          <div
            className="makeStyles-root-1890"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root makeStyles-icon-1891 makeStyles-icon-1892"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="Icon / Arrow / Large"
                >
                  <path
                    clipRule="evenodd"
                    d="M11 4.25C11 4.11193 11.1119 4 11.25 4H12.75C12.8881 4 13 4.11193 13 4.25V16.4L18.2232 11.1768C18.3209 11.0791 18.4792 11.0791 18.5768 11.1768L19.6375 12.2374C19.7351 12.3351 19.7351 12.4934 19.6375 12.591L12.1721 20.0564C12.1219 20.1065 12.0557 20.1309 11.99 20.1295C11.9243 20.1309 11.8581 20.1065 11.8079 20.0564L4.34257 12.591C4.24494 12.4934 4.24494 12.3351 4.34257 12.2374L5.40323 11.1768C5.50086 11.0791 5.65915 11.0791 5.75678 11.1768L11 16.42V4.25Z"
                    fill="#4FB573"
                    fillRule="evenodd"
                    id="Union"
                  />
                </g>
              </svg>
            </svg>
          </div>
          <div
            className="makeStyles-root-1890"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root makeStyles-icon-1891 makeStyles-icon-1902"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="Icon / Arrow / Large"
                >
                  <path
                    clipRule="evenodd"
                    d="M11 4.25C11 4.11193 11.1119 4 11.25 4H12.75C12.8881 4 13 4.11193 13 4.25V16.4L18.2232 11.1768C18.3209 11.0791 18.4792 11.0791 18.5768 11.1768L19.6375 12.2374C19.7351 12.3351 19.7351 12.4934 19.6375 12.591L12.1721 20.0564C12.1219 20.1065 12.0557 20.1309 11.99 20.1295C11.9243 20.1309 11.8581 20.1065 11.8079 20.0564L4.34257 12.591C4.24494 12.4934 4.24494 12.3351 4.34257 12.2374L5.40323 11.1768C5.50086 11.0791 5.65915 11.0791 5.75678 11.1768L11 16.42V4.25Z"
                    fill="#4FB573"
                    fillRule="evenodd"
                    id="Union"
                  />
                </g>
              </svg>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|ReadMore Read More 1`] = `
<div>
  <div>
    <div
      className="makeStyles-textContainer-1981"
    >
      <div
        className="MuiTypography-root makeStyles-root-1982 makeStyles-root-1983 MuiTypography-body1"
      >
        This property is a rare pocket of wetlands and woodlands located near the township of Menindee South Australia, nestled in between the Coorong national park and Lake Albert.

As one of the few remaining sections of privately owned remnant vegetation in the area, this represents a unique opportunity for long term preservation. The Coorong, Lake Alexandrina and Lake Albert Wetland is an international significant RAMSAR wetland ecosystems at the intersection of the Murray River and Southern Ocean.

This vital habitat comprises a unique mix of both freshwater and saltwater wetlands and coastal woodlands. The Coorong is the heart of the traditional lands of Ngarrindjeri people, who have hunted and camped on the Mt Sandy property for thousands of years.
      </div>
    </div>
    <button
      className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-2014 MuiButton-text MuiButton-textSecondary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <span
          className="MuiButton-startIcon WithStyles(ForwardRef(Button))-startIcon-2015 MuiButton-iconSizeMedium"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root makeStyles-icon-2048 makeStyles-icon-2049"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <svg
              fill="none"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Icon / Arrow / Large"
              >
                <path
                  clipRule="evenodd"
                  d="M11 4.25C11 4.11193 11.1119 4 11.25 4H12.75C12.8881 4 13 4.11193 13 4.25V16.4L18.2232 11.1768C18.3209 11.0791 18.4792 11.0791 18.5768 11.1768L19.6375 12.2374C19.7351 12.3351 19.7351 12.4934 19.6375 12.591L12.1721 20.0564C12.1219 20.1065 12.0557 20.1309 11.99 20.1295C11.9243 20.1309 11.8581 20.1065 11.8079 20.0564L4.34257 12.591C4.24494 12.4934 4.24494 12.3351 4.34257 12.2374L5.40323 11.1768C5.50086 11.0791 5.65915 11.0791 5.75678 11.1768L11 16.42V4.25Z"
                  fill="#4FB573"
                  fillRule="evenodd"
                  id="Union"
                />
              </g>
            </svg>
          </svg>
        </span>
        read 
        more
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Timeline Timeline 1`] = `
<div>
  <div
    className="makeStyles-root-2122"
  >
    <div
      className="makeStyles-item-2123"
    >
      <div
        className="makeStyles-content-2124 makeStyles-content-2129"
      >
        <div
          className="makeStyles-date-2125"
        >
          September 2, 2019
        </div>
        <h4
          className="MuiTypography-root makeStyles-root-2132 undefined MuiTypography-h4 MuiTypography-colorTextPrimary MuiTypography-alignLeft"
        >
          Project starts
        </h4>
        <div
          className="makeStyles-description-2126"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
        <span
          className="makeStyles-circle-2128 makeStyles-circle-2131"
        />
        <div
          className="makeStyles-bar-2127 makeStyles-bar-2130"
        />
      </div>
    </div>
    <div
      className="makeStyles-item-2123"
    >
      <div
        className="makeStyles-content-2124 makeStyles-content-2163"
      >
        <div
          className="makeStyles-date-2125"
        >
          October 21, 2019
        </div>
        <h4
          className="MuiTypography-root makeStyles-root-2132 undefined MuiTypography-h4 MuiTypography-colorTextPrimary MuiTypography-alignLeft"
        >
          Approval complete
        </h4>
        <div
          className="makeStyles-description-2126"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
        <span
          className="makeStyles-circle-2128 makeStyles-circle-2165"
        />
        <div
          className="makeStyles-bar-2127 makeStyles-bar-2164"
        />
      </div>
    </div>
    <div
      className="makeStyles-item-2123"
    >
      <div
        className="makeStyles-content-2124 makeStyles-content-2166"
      >
        <div
          className="makeStyles-date-2125"
        >
          February 20, 2020
        </div>
        <h4
          className="MuiTypography-root makeStyles-root-2132 undefined MuiTypography-h4 MuiTypography-colorTextPrimary MuiTypography-alignLeft"
        >
          Credits issued
        </h4>
        <div
          className="makeStyles-description-2126"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
        <span
          className="makeStyles-circle-2128 makeStyles-circle-2168"
        />
        <div
          className="makeStyles-bar-2127 makeStyles-bar-2167"
        />
      </div>
    </div>
    <div
      className="makeStyles-item-2123"
    >
      <div
        className="makeStyles-content-2124 makeStyles-content-2169"
      >
        <div
          className="makeStyles-date-2125"
        >
          September 1, 2022
        </div>
        <h4
          className="MuiTypography-root makeStyles-root-2132 undefined MuiTypography-h4 MuiTypography-colorTextPrimary MuiTypography-alignLeft"
        >
          Site visit
        </h4>
        <div
          className="makeStyles-description-2126"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
        <span
          className="makeStyles-circle-2128 makeStyles-circle-2171"
        />
        <div
          className="makeStyles-bar-2127 makeStyles-bar-2170"
        />
      </div>
    </div>
    <div
      className="makeStyles-item-2123"
    >
      <div
        className="makeStyles-content-2124 makeStyles-content-2172"
      >
        <div
          className="makeStyles-date-2125"
        >
          February 1, 2029
        </div>
        <h4
          className="MuiTypography-root makeStyles-root-2132 undefined MuiTypography-h4 MuiTypography-colorTextPrimary MuiTypography-alignLeft"
        >
          Project completion
        </h4>
        <div
          className="makeStyles-description-2126"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
        <span
          className="makeStyles-circle-2128 makeStyles-circle-2174"
        />
        <div
          className="makeStyles-bar-2127 makeStyles-bar-2173"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Timeline Timeline Item 1`] = `
<div>
  <div
    className="makeStyles-content-2214 makeStyles-content-2219"
  >
    <div
      className="makeStyles-date-2215"
    >
      September 2, 2019
    </div>
    <h4
      className="MuiTypography-root makeStyles-root-2222 undefined MuiTypography-h4 MuiTypography-colorTextPrimary MuiTypography-alignLeft"
    >
      Project starts
    </h4>
    <div
      className="makeStyles-description-2216"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </div>
    <span
      className="makeStyles-circle-2218 makeStyles-circle-2221"
    />
    <div
      className="makeStyles-bar-2217 makeStyles-bar-2220"
    />
  </div>
</div>
`;

exports[`Storyshots Components|Title Main Title 1`] = `
<div>
  <h1
    className="MuiTypography-root makeStyles-root-2284 undefined MuiTypography-h1 MuiTypography-colorTextPrimary MuiTypography-alignLeft"
  >
    Sheok Hill
  </h1>
</div>
`;

exports[`Storyshots Components|Title Subtitle 1`] = `
<div>
  <h2
    className="MuiTypography-root makeStyles-root-2346 undefined MuiTypography-h2 MuiTypography-colorTextPrimary MuiTypography-alignLeft"
  >
    Ecological Practices
  </h2>
</div>
`;

exports[`Storyshots Components|Title Title 1`] = `
<div>
  <h1
    className="MuiTypography-root makeStyles-root-2408 undefined MuiTypography-h1 MuiTypography-colorTextPrimary MuiTypography-alignLeft"
  >
    Ecological Practices
  </h1>
</div>
`;

exports[`Storyshots Components|User Big User Avatar 1`] = `
<div>
  <div
    className="MuiAvatar-root MuiAvatar-circle makeStyles-root-2466 makeStyles-root-2467"
  >
    <img
      alt="Odonata"
      className="MuiAvatar-img"
      src="http://www.odonata.org.au/wp-content/uploads/2018/01/odinata-logo-only.png"
    />
  </div>
</div>
`;

exports[`Storyshots Components|User Big User Info 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap"
  >
    <div
      className="MuiGrid-root MuiGrid-item"
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle makeStyles-root-3094 makeStyles-root-3095"
      >
        <img
          alt="Odonata"
          className="MuiAvatar-img"
          src="http://www.odonata.org.au/wp-content/uploads/2018/01/odinata-logo-only.png"
        />
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-text-2982 makeStyles-text-2987 MuiGrid-item"
    >
      <p
        className="MuiTypography-root makeStyles-name-2983 makeStyles-name-2988 MuiTypography-body1"
      >
        Odonata
      </p>
      <p
        className="MuiTypography-root makeStyles-place-2986 makeStyles-place-2989 MuiTypography-body1"
      >
        South Melbourne, Victoria, Australia
      </p>
      <p
        className="MuiTypography-root makeStyles-description-2985 MuiTypography-body1"
      >
        Odonata is a not-for-profit entity supporting biodiversity impact solutions.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|User Column User Info 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap"
  >
    <div
      className="MuiGrid-root MuiGrid-item"
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle makeStyles-root-3396 makeStyles-root-3397"
      >
        <img
          alt="Odonata"
          className="MuiAvatar-img"
          src="http://www.odonata.org.au/wp-content/uploads/2018/01/odinata-logo-only.png"
        />
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-text-3284 makeStyles-text-3289 MuiGrid-item"
    >
      <p
        className="MuiTypography-root makeStyles-name-3285 makeStyles-name-3290 MuiTypography-body1"
      >
        Odonata
      </p>
      <p
        className="MuiTypography-root makeStyles-place-3288 makeStyles-place-3291 MuiTypography-body1"
      >
        South Melbourne, Victoria, Australia
      </p>
      <p
        className="MuiTypography-root makeStyles-description-3287 MuiTypography-body1"
      >
        Odonata is a not-for-profit entity supporting biodiversity impact solutions.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|User Fallback User Avatar 1`] = `
<div>
  <div
    className="MuiAvatar-root MuiAvatar-circle makeStyles-root-2511 makeStyles-root-2512 MuiAvatar-colorDefault"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root MuiAvatar-fallback"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Components|User Medium User Avatar 1`] = `
<div>
  <div
    className="MuiAvatar-root MuiAvatar-circle makeStyles-root-2448 makeStyles-root-2449"
  >
    <img
      alt="Odonata"
      className="MuiAvatar-img"
      src="http://www.odonata.org.au/wp-content/uploads/2018/01/odinata-logo-only.png"
    />
  </div>
</div>
`;

exports[`Storyshots Components|User Medium User Info 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap"
  >
    <div
      className="MuiGrid-root MuiGrid-item"
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle makeStyles-root-2792 makeStyles-root-2793"
      >
        <img
          alt="Odonata"
          className="MuiAvatar-img"
          src="http://www.odonata.org.au/wp-content/uploads/2018/01/odinata-logo-only.png"
        />
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-text-2680 makeStyles-text-2685 MuiGrid-item"
    >
      <p
        className="MuiTypography-root makeStyles-name-2681 makeStyles-name-2686 MuiTypography-body1"
      >
        Odonata
      </p>
      <p
        className="MuiTypography-root makeStyles-place-2684 makeStyles-place-2687 MuiTypography-body1"
      >
        South Melbourne, Victoria, Australia
      </p>
      <p
        className="MuiTypography-root makeStyles-description-2683 MuiTypography-body1"
      >
        Odonata is a not-for-profit entity supporting biodiversity impact solutions.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|User User Avatar With Link 1`] = `
<div>
  <a
    href="http://www.odonata.org.au"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      className="MuiAvatar-root MuiAvatar-circle makeStyles-root-2484 makeStyles-root-2485"
    >
      <img
        alt="Odonata"
        className="MuiAvatar-img"
        src="http://www.odonata.org.au/wp-content/uploads/2018/01/odinata-logo-only.png"
      />
    </div>
  </a>
</div>
`;

exports[`Storyshots Components|User With Title 1`] = `
<div>
  <div>
    <p
      className="MuiTypography-root makeStyles-title-3587 MuiTypography-body1"
    >
      project developer
    </p>
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <div
          className="MuiAvatar-root MuiAvatar-circle makeStyles-root-3730 makeStyles-root-3731"
        >
          <img
            alt="Odonata"
            className="MuiAvatar-img"
            src="http://www.odonata.org.au/wp-content/uploads/2018/01/odinata-logo-only.png"
          />
        </div>
      </div>
      <div
        className="MuiGrid-root makeStyles-text-3618 makeStyles-text-3623 MuiGrid-item"
      >
        <p
          className="MuiTypography-root makeStyles-name-3619 makeStyles-name-3624 MuiTypography-body1"
        >
          Odonata
        </p>
        <p
          className="MuiTypography-root makeStyles-place-3622 makeStyles-place-3625 MuiTypography-body1"
        >
          South Melbourne, Victoria, Australia
        </p>
        <p
          className="MuiTypography-root makeStyles-description-3621 MuiTypography-body1"
        >
          Odonata is a not-for-profit entity supporting biodiversity impact solutions.
        </p>
      </div>
    </div>
  </div>
</div>
`;
